--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ notifications:
 before_script:
   - npm install -g abaplint
 script:
-  - abaplint "src/**/*.abap"
+  - abaplint "**/*.abap"
 branches:
   only: 
     - master
